coregi el nombre

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1> hola desde html </h1>  
-  <h3> hola mi nombre es gristian</h3>
+  <h3> hola mi nombre es cristian</h3>
 </body>
 </html>
